--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,16 +1,3 @@
-
-/* 
-
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
-
 .card-image-wrapper {
     /*box-sizing: content-box;*/
     max-width: 150px;
@@ -19,6 +6,8 @@
     border-radius: 50%;
     padding: 0%;
     align-items:center;
+    aspect-ratio: 1/1;
+    min-width: 150px;
 }
 img {
     
@@ -36,4 +25,7 @@ img {
 
 p {
     white-space: nowrap;
+}
+body {
+    background-color: aliceblue;
 }
